[gd_scene load_steps=3 format=3 uid="uid://dcb7dxh824803"]

[ext_resource type="StyleBox" uid="uid://bipq72iurrlw5" path="res://addons/anthonyec.timeline/track_box_style.tres" id="1_7pm0s"]
[ext_resource type="Script" path="res://addons/anthonyec.timeline/track.gd" id="1_nyua4"]

[node name="Track" type="Panel"]
custom_minimum_size = Vector2(2.08165e-12, 40)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.062
offset_bottom = -40.176
grow_horizontal = 2
theme_override_styles/panel = ExtResource("1_7pm0s")
script = ExtResource("1_nyua4")

[node name="ContextMenu" type="PopupMenu" parent="."]
size = Vector2i(106, 100)
item_count = 1
item_0/text = "Add Clip"
item_0/id = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="index_pressed" from="ContextMenu" to="." method="_on_context_menu_index_pressed"]
